# smart-calc

./: README.md  vaemonds.txt
src/: Makefile  calculate.c  main.c  main.h  parser.c  stack.c  translate.c
src/src_0/: s21_calc.c  s21_calc.h  s21_stack.c
src/src_1/: Makefile
src/src_1/doc/: doc.dvi  doc.tex
src/src_1/source/: SmartCalc.pro  backend.c  backend.h  calculate.c  check_input.c  haha.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  polish_notation.c  stack_num.c  stack_op.c
src/src_1/source/cmake/: CMakeLists.txt
src/src_1/test/: test.check
src/src_2/: Makefile  calculator.h  compute.c  credit.c  deposit.c  mainwindow.h  mainwindow.ui  readme.txt  test.c  x_exist.h
